Add tilde backup files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,9 @@ runinfo/
 # Mac cruft
 .DS_Store
 
+# Backup files
+*~
+
 .mypy_cache
 qcarchivetesting/qcarchivetesting/MaxMind-DB
 conda-build/builds
